--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -1,8 +1,8 @@
-name: Pubby.co Login, Browse & Pick Free Book Automation
+name: Pubby.co Login, Browse & Pick Kindle Unlimited Book Automation
 
 on:
   schedule:
-    - cron: '*/10 * * * *'  # Run every 10 minutes
+    - cron: '*/10 * * * *'
   workflow_dispatch:
 
 jobs:
@@ -23,7 +23,7 @@ jobs:
           npm init -y
           npm install puppeteer puppeteer-core puppeteer-extra puppeteer-extra-plugin-stealth fs
 
-      - name: Create Puppeteer script for Login, Browse & Pick Free Book
+      - name: Create Puppeteer script for Login, Browse & Pick Kindle Unlimited Book
         run: |
           mkdir -p scripts screenshots
           cat > scripts/pubby-login-and-browse.js << 'EOL'
@@ -33,12 +33,10 @@ jobs:
 
           puppeteer.use(StealthPlugin());
 
-          // Helper sleep function.
           function sleep(ms) {
             return new Promise(resolve => setTimeout(resolve, ms));
           }
 
-          // Helper function to safely take a screenshot.
           async function safeScreenshot(page, path) {
             try {
               await page.screenshot({ path });
@@ -54,229 +52,175 @@ jobs:
               console.log("Launching browser...");
               browser = await puppeteer.launch({
                 headless: "new",
-                args: [
-                  '--no-sandbox',
-                  '--disable-setuid-sandbox'
-                ]
+                args: ['--no-sandbox','--disable-setuid-sandbox']
               });
               page = await browser.newPage();
 
-              // Stage 1: Navigate to the login page.
+              // Stage 1: Login
               console.log("Navigating to login page:", loginUrl);
               await page.goto(loginUrl, { waitUntil: 'networkidle2', timeout: 60000 });
               await safeScreenshot(page, `./screenshots/pubby_home_${Date.now()}.png`);
 
-              // Stage 2: Fill in the login form.
               console.log("Filling in login credentials...");
               await page.type('input[name="email"]', username, { delay: 100 });
               await page.type('input[name="password"]', password, { delay: 100 });
               await safeScreenshot(page, `./screenshots/pubby_credentials_filled_${Date.now()}.png`);
 
-              // Stage 3: Submit the login form.
-              console.log("Clicking the login button...");
+              console.log("Submitting login form...");
               await Promise.all([
                 page.waitForNavigation({ waitUntil: 'networkidle2', timeout: 60000 }),
                 page.click('button[type="submit"]')
               ]);
               await safeScreenshot(page, `./screenshots/pubby_after_login_${Date.now()}.png`);
 
-              // Stage 4: Verify login status.
+              // Stage 4: Verify login
               console.log("Verifying login status...");
               const dashboard = await page.$('a.logout, .dashboard');
-              if (dashboard) {
-                console.log("Login successful.");
-              } else {
-                console.warn("Login may have failed. Dashboard element not found.");
+              if (!dashboard) {
+                console.warn("Login may have failed.");
                 await safeScreenshot(page, `./screenshots/pubby_login_failed_${Date.now()}.png`);
               }
 
-              // Stage 5: Navigate to the browse page.
+              // Stage 5: Browse page
               console.log("Navigating to browse page:", browseUrl);
               await page.goto(browseUrl, { waitUntil: 'networkidle2', timeout: 60000 });
               await sleep(10000);
               await safeScreenshot(page, `./screenshots/pubby_browse_${Date.now()}.png`);
 
-              // ─── Stage 5.5: Click the “Kindle Unlimited” filter, then “Most Snaps” ───────────────────
-              console.log("Locating the 'Kindle Unlimited' filter…");
+              // Stage 5.5: Click Kindle Unlimited
+              console.log("Clicking 'Kindle Unlimited' filter…");
               const kuClicked = await page.evaluate(() => {
-                const tags = Array.from(document.querySelectorAll('.browsing-tag'));
-                const kuTag = tags.find(tag =>
-                  tag.querySelector('.label')?.innerText.trim() === 'Kindle Unlimited'
-                );
-                if (kuTag) {
-                  console.log("Found Kindle Unlimited — clicking it");
-                  kuTag.click();
-                  return true;
-                }
-                console.warn("Kindle Unlimited filter not found");
+                const tag = Array.from(document.querySelectorAll('.browsing-tag'))
+                  .find(t => t.querySelector('.label')?.innerText.trim() === 'Kindle Unlimited');
+                if (tag) { tag.click(); return true; }
                 return false;
               });
-              if (!kuClicked) {
-                console.error("ERROR: Could not click 'Kindle Unlimited' filter");
-              }
+              if (!kuClicked) console.error("Could not find Kindle Unlimited filter");
               await sleep(5000);
               await safeScreenshot(page, `./screenshots/pubby_kindle_unlimited_${Date.now()}.png`);
 
-              console.log("Locating the 'Most Snaps' filter…");
+              // Stage 5.6: Click Most Snaps
+              console.log("Clicking 'Most Snaps' filter…");
               const snapsClicked = await page.evaluate(() => {
-                const tags = Array.from(document.querySelectorAll('.browsing-tag'));
-                const snapsTag = tags.find(tag =>
-                  tag.querySelector('.label.is-underlined')?.innerText.trim() === 'Most Snaps'
-                );
-                if (snapsTag) {
-                  console.log("Found Most Snaps — clicking it");
-                  snapsTag.click();
-                  return true;
-                }
-                console.warn("Most Snaps filter not found");
+                const tag = Array.from(document.querySelectorAll('.browsing-tag'))
+                  .find(t => t.querySelector('.label')?.innerText.trim() === 'Most Snaps');
+                if (tag) { tag.click(); return true; }
                 return false;
               });
-              if (!snapsClicked) {
-                console.error("ERROR: Could not click 'Most Snaps' filter");
-              }
+              if (!snapsClicked) console.error("Could not find Most Snaps filter");
               await sleep(5000);
               await safeScreenshot(page, `./screenshots/pubby_most_snaps_${Date.now()}.png`);
 
-              // Stage 6: Wait for the books container to be visible.
-              console.log("Waiting for the books container to appear...");
+              // Stage 6: Wait for books container
+              console.log("Waiting for books container…");
               await page.waitForSelector('.library-books-container', { visible: true, timeout: 60000 });
-              console.log("Books container loaded.");
               await safeScreenshot(page, `./screenshots/pubby_browse_loaded_${Date.now()}.png`);
-
-              // Extended wait to ensure content loads.
-              console.log("Extended wait for content...");
               await sleep(5000);
 
-              // Stage 7: Scroll down multiple times to load more books.
+              // Stage 7: Scroll to load more
               for (let i = 0; i < 3; i++) {
-                console.log(`Scrolling down, iteration ${i+1}`);
-                await page.evaluate(() => {
-                  window.scrollBy(0, window.innerHeight);
-                });
+                console.log(`Scrolling iteration ${i+1}`);
+                await page.evaluate(() => window.scrollBy(0, window.innerHeight));
                 await sleep(3000);
                 await safeScreenshot(page, `./screenshots/pubby_scroll_${i+1}_${Date.now()}.png`);
               }
 
-              // Stage 8: Extract Recommended Books.
-              console.log("Extracting Recommended Books...");
+              // Stage 8: Extract Recommended Titles
+              console.log("Extracting Recommended Books…");
               const recommendedBooks = await page.evaluate(() => {
-                const books = [];
-                document.querySelectorAll('.pages-container .page-label.current-page').forEach(label => {
-                  const titleElement = label.querySelector('.page-label-text span') || label.querySelector('.page-label-text');
-                  if (titleElement && titleElement.innerText.trim().length > 0) {
-                    books.push(titleElement.innerText.trim());
-                  }
-                });
-                return books;
+                return Array.from(
+                  document.querySelectorAll('.library-books-container .card .title-text')
+                ).map(el => el.innerText.trim());
               });
-              console.log("Final Recommended Books:", recommendedBooks);
+              console.log("Recommended Books:", recommendedBooks);
               await safeScreenshot(page, `./screenshots/pubby_books_extracted_${Date.now()}.png`);
 
-              // Stage 9: Extract Activity Timeline.
-              console.log("Extracting Activity Timeline...");
+              // Stage 9: Extract Timeline
+              console.log("Extracting Activity Timeline…");
               const activityTimeline = await page.evaluate(() => {
-                const events = [];
-                document.querySelectorAll('.timeline .event').forEach(event => {
-                  const contentEl = event.querySelector('.content');
-                  const timeEl = event.querySelector('.time');
-                  events.push({
-                    content: contentEl ? contentEl.innerText.trim() : '',
-                    time: timeEl ? timeEl.innerText.trim() : ''
-                  });
-                });
-                return events;
+                return Array.from(document.querySelectorAll('.timeline .event')).map(ev => ({
+                  content: ev.querySelector('.content')?.innerText.trim() || '',
+                  time: ev.querySelector('.time')?.innerText.trim() || ''
+                }));
               });
               console.log("Activity Timeline:", activityTimeline);
               await safeScreenshot(page, `./screenshots/pubby_activity_extracted_${Date.now()}.png`);
 
-              // Stage 10: Find a free book card, click it, then click "Pick Book".
-              console.log("Scanning for free book cards...");
-              const freeCardHandle = await page.evaluateHandle((xpath) => {
-                const results = [];
-                const query = document.evaluate(xpath, document, null, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null);
-                for (let i = 0; i < query.snapshotLength; i++) {
-                  results.push(query.snapshotItem(i));
+              // Stage 10: Pick a Kindle Unlimited card
+              console.log("Scanning for Kindle Unlimited cards…");
+              const kuCardHandle = await page.evaluateHandle(xpath => {
+                const nodes = [];
+                const result = document.evaluate(
+                  xpath, document, null, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null
+                );
+                for (let i = 0; i < result.snapshotLength; i++) {
+                  nodes.push(result.snapshotItem(i));
                 }
-                return results;
-              }, "//div[contains(@class, 'card') and .//div[contains(@class, 'free')] and contains(., 'Free Download')]");
-              const freeCardProps = await freeCardHandle.getProperties();
-              const freeCardElements = [];
-              for (const property of freeCardProps.values()) {
-                const element = property.asElement();
-                if (element)
-                  freeCardElements.push(element);
+                return nodes;
+              }, "//div[contains(@class,'card') and .//span[contains(@class,'verified-price') and normalize-space(text())='Kindle Unlimited']]");
+              const kuProps = await kuCardHandle.getProperties();
+              const kuElements = [];
+              for (const p of kuProps.values()) {
+                const el = p.asElement();
+                if (el) kuElements.push(el);
               }
-              if (freeCardElements.length > 0) {
-                console.log("Free book card found. Clicking the card...");
-                await freeCardElements[0].click();
+              if (kuElements.length > 0) {
+                console.log("Found KU card—clicking…");
+                await kuElements[0].click();
                 await sleep(2000);
-                await safeScreenshot(page, `./screenshots/pubby_free_card_clicked_${Date.now()}.png`);
+                await safeScreenshot(page, `./screenshots/pubby_ku_card_clicked_${Date.now()}.png`);
 
-                console.log("Looking for 'Pick Book' button...");
-                const pickBookHandle = await page.evaluateHandle((xpath) => {
-                  const results = [];
-                  const query = document.evaluate(xpath, document, null, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null);
-                  for (let i = 0; i < query.snapshotLength; i++) {
-                    results.push(query.snapshotItem(i));
+                console.log("Looking for 'Pick Book' button…");
+                const pickHandle = await page.evaluateHandle(xpath => {
+                  const nodes = [];
+                  const res = document.evaluate(
+                    xpath, document, null, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null
+                  );
+                  for (let i = 0; i < res.snapshotLength; i++) {
+                    nodes.push(res.snapshotItem(i));
                   }
-                  return results;
-                }, "//div[contains(@class, 'action') and contains(@class, 'action-blue') and normalize-space(text())='Pick Book']");
-                const pickBookProps = await pickBookHandle.getProperties();
-                const pickBookElements = [];
-                for (const property of pickBookProps.values()) {
-                  const element = property.asElement();
-                  if (element)
-                    pickBookElements.push(element);
+                  return nodes;
+                }, "//div[contains(@class,'action-blue') and normalize-space(text())='Pick Book']");
+                const pickProps = await pickHandle.getProperties();
+                const pickEls = [];
+                for (const p of pickProps.values()) {
+                  const e = p.asElement();
+                  if (e) pickEls.push(e);
                 }
-                if (pickBookElements.length > 0) {
-                  console.log("'Pick Book' button found. Clicking...");
-                  await pickBookElements[0].click();
+                if (pickEls.length > 0) {
+                  console.log("Clicking 'Pick Book'…");
+                  await pickEls[0].click();
                   await sleep(2000);
                   await safeScreenshot(page, `./screenshots/pubby_pick_book_clicked_${Date.now()}.png`);
                 } else {
-                  console.log("'Pick Book' button not found after clicking the free book card.");
+                  console.warn("No 'Pick Book' button found.");
                 }
               } else {
-                console.log("No free book card found.");
+                console.warn("No Kindle Unlimited card found.");
               }
-            } catch (error) {
-              console.error("Script error:", error.message);
+
+            } catch (err) {
+              console.error("Script error:", err.message);
             } finally {
-              // Always save the final HTML of the browse page.
               if (page) {
                 try {
-                  console.log("Saving final HTML of the browse page...");
-                  const finalHtml = await page.content();
-                  const htmlFile = `./screenshots/pubby_final_page_${Date.now()}.html`;
-                  fs.writeFileSync(htmlFile, finalHtml);
-                  console.log(`Final HTML saved: ${htmlFile}`);
-                } catch (e) {
-                  console.error("Failed to save final HTML:", e.message);
-                }
+                  console.log("Saving final HTML…");
+                  const html = await page.content();
+                  fs.writeFileSync(`./screenshots/pubby_final_page_${Date.now()}.html`, html);
+                } catch {}
               }
-              if (browser) {
-                await browser.close();
-              }
+              if (browser) await browser.close();
             }
           }
 
-          async function run() {
-            const loginUrl = process.env.PUBBY_LOGIN_URL || "https://account.pubby.co/login";
-            const browseUrl = process.env.PUBBY_BROWSE_URL || "https://app.pubby.co/#/browse";
+          (async () => {
+            const loginUrl = process.env.PUBBY_LOGIN_URL;
+            const browseUrl = process.env.PUBBY_BROWSE_URL;
             const username = process.env.PUBBY_USERNAME;
             const password = process.env.PUBBY_PASSWORD;
-
-            if (!username || !password) {
-              console.error("Username and password must be provided via environment variables.");
-              process.exit(1);
-            }
+            if (!username || !password) { console.error("Missing credentials"); process.exit(1); }
             await loginAndBrowse(loginUrl, browseUrl, username, password);
-          }
-
-          run().catch(error => {
-            console.error("Script failed:", error.message);
-            process.exit(1);
-          });
+          })();
           EOL
 
       - name: Run Puppeteer script
